app-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: app
  labels:
    tier: app
    app: HRApp-1
    site: USA
    deployment: production
spec:
  nodeSelector:
    "kubernetes.io/hostname": compute-contrail-sf
  containers:
    - name: app
      image: virtualhops/ato-ubuntu:latest
  restartPolicy: Never
