db-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: db
  labels:
    tier: db
    app: HRApp-1
    site: USA
    deployment: production
spec:
  nodeSelector:
    "kubernetes.io/hostname": compute-contrail-ny
  containers:
    - name: db
      image: virtualhops/ato-ubuntu:latest
  restartPolicy: Never
