policy-app-to-db.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apptodb 
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: db 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: app
