policy-web-to-db-bms.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webtodb-bms
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: db-bms
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: web
